Added Admin endpoints with API-first approach
Added Admin endpoints with API-first approach
